@@ -2,8 +2,14 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Feb 2010; <slep@gentoo.org> +osutil-1.3.1.ebuild:
+  initial commit
+
+
   13 Feb 2010; <slep@gentoo.org> +osutil-1.3.0.ebuild:
   initial commit
+
+*osutil-1.3.1  ( 12 Feb 2010 )
 
 *osutil-1.3.0  ( 12 Feb 2010 )
 
